--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "formula-rs-wasm"
-version = "0.1.0"
 authors = ["ununian <ununian@outlook.com>"]
 edition = "2018"
+name = "formula-rs-wasm"
+version = "0.1.0"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -17,17 +17,16 @@ wasm-bindgen = "0.2.63"
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
-console_error_panic_hook = { version = "0.1.6", optional = true }
+console_error_panic_hook = {version = "0.1.6", optional = true}
 
 # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
 # compared to the default allocator's ~10K. It is slower than the default
 # allocator, however.
-wee_alloc = { version = "0.4.5", optional = true }
+wee_alloc = {version = "0.4.5", optional = true}
 
-pest = "2.1"
-pest_derive = "2.1"
-serde_json = "1.0"
-
+pest = {version = "2.4", default-features = false}
+pest_derive = {version = "2.4", default-features = false}
+serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
