--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ num = { version = "0.4.0", default-features = false, features = ["alloc", "serde
 lazy_static = "1.4.0"
 bincode = { version = "1.3.3" }
 hashbrown = "0.13"
+rayon = "1.7.0"
 
 # chrono = { version = "0.4.0", default-features = false, features = ["alloc"] }
 
@@ -47,7 +48,3 @@ opt-level = "s"
 name = "formula"
 path = "src/cli/main.rs"
 doc = false
-
-[target.x86_64-unknown-linux-musl]
-linker = "rust-lld"
-rustflags = ["-C", "linker-flavor=ld.lld"]
